@@ -2,18 +2,21 @@ package com.self.help.graph;
 
 import com.self.help.graph.core.Row;
 
+import java.util.Collections;
 import java.util.List;
 
 public class StaticDataLoader {
 
     public static List<Row> getStaticData() {
-        Row row1 = new Row("Nasik", "Pune", "byRoad");
-        Row row2 = new Row("Mumbai", "Pune", "byRoad");
-        Row row3 = new Row("Pune", "Solapur", "byRoad");
-        Row row4 = new Row("Solapur", "Vijapur", "byRoad");
-        Row row5 = new Row("Solapur", "Vijapur", "byRail");
+        /*Row row1 = new Row("Nasik", "Cbs", "Pune", "Katraj", "byRoad");
+        Row row2 = new Row("Mumbai", "Kurla", "Pune", "Swarget", "byRoad");
+        Row row3 = new Row("Pune", "Katraj", "Solapur", "Shivaji Nagar", "byRoad");
+        Row row4 = new Row("Solapur", "Shivaji Nagar", "Vijapur", "Station", "byRoad");
+        Row row5 = new Row("Solapur", "Shivaji Nagar", "Vijapur", "Station", "byRail");
 
+        return List.of(row1, row2, row3, row4, row5);*/
 
-        return List.of(row1, row2, row3, row4, row5);
+        //return List.of(new Row("Pune", "Katraj", "Pune", "Shivaji Nagar", "byRoad"));
+        return Collections.emptyList();
     }
 }
